applauncherd (0.29.0) unstable; urgency=low

  * Changes: New test added to check the daemons running after boot that uses invoker

 -- Nimika Keshri <nimika.1.keshri@nokia.com>  Tue, 19 Apr 2011 10:43:29 +0300

applauncherd (0.28.0) stable; urgency=low

  * Changes: Stuff to the README added.
  * Changes: Some coverity tool defects are fixed
  * Changes: Coverity tool defect fixes for tests
  * Fixes: NB#247253 - Invoker should not show splash-screen if app is already running

 -- Jussi Lind <jussi.lind@nokia.com>  Thu, 14 Apr 2011 15:44:45 +0300

applauncherd (0.27.0) stable; urgency=low

  * Changes: Fixed misbehaving pixelchanged application
  * Changes: Added stopping all daemons which are using invoker before functional tests
  * Implemented: SWP#DUI-5199, SWP#DUI-5180, SWP#DUI-5162
  * Fixes: NB#244103 - Device hangs on closing application in connecting view while configuring MFE account
  * Fixes: NB#243857 - Mismatched new[] - delete in applauncherd
  * Fixes: NB#238937 - minor splash-screen bugs
  * Fixes: NB#246767 - Invoker is killed when used to maximize already running single-instance application

 -- Olli Leppanen <olli.leppanen@nokia.com>  Fri, 08 Apr 2011 15:08:24 +0300

applauncherd (0.26.0) stable; urgency=low

  * Fixes: NB#240051 - applauncherd-launcher: please remove requests of DRM related token
  * Fixes: NB#242533 - applauncherd.bin is terminated by SIGPIPE
  * Changes: Added QML booster user documentation into doc package

 -- Jussi Lind <jussi.lind@nokia.com>  Thu, 07 Apr 2011 16:24:15 +0300

applauncherd (0.25.1) stable; urgency=low

  * Fixes: NB#241927 - QML boosted applications have incorrect MApplication::objectName
  * Lock file moved to /var/run
  * Changes: Use #include <MDeclarativeCache> in boosted-qml examples
  * Changes: Added -I/usr/include/applauncherd to qdeclarative-boostable.pc

 -- Jussi Lind <jussi.lind@nokia.com>  Thu, 31 Mar 2011 17:13:21 +0300

applauncherd (0.25.0) stable; urgency=low
